# ai-embedding-udf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml
ai/: README.md  __init__.py  models.py  typing.py
ai/protocols/: __init__.py  pdf_parser.py  text_embedder.py
ai/providers/: __init__.py  aiworks_provider.py  base.py  openai_provider.py
ai/utils/: __init__.py  embedding_viz.py  logging_utils.py  retry_utils.py
doc/: AI模块算子说明.md
examples/: example_pdf_parser.py  test_embedding_aiworks.py
tests/: __init__.py  test_basic.py
